--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,20 +1,38 @@
-<h1>Job: <%= @job.task %></h1>
+<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+<div class="job">
+    <h1>Job: <%= @job.task %></h1>
+    <hr>
 
-<%= image_tag @job.image, :class => 'feature' if @job.image.present? %>
-<ul>
-    <li>Name: <%= @job.task %></li>
-    <li>Location: <%= @job.location %></li>
-    <li>Description: <%= @job.description %></li>
-    <li>Duration: <%= @job.duration %></li>
-    <li>Image: <%= @job.image %></li>
-</ul>
+    <%= cl_image_tag @job.image, :class => 'feature' if @job.image.present? %>
+    <ul class= 'joblist'>
+        <li><i class='fas fa-user-circle'></i><em>POSTED BY:</em>
+        <br>
+         <strong><%= @job.user.name%> <%=@job.user.family%> </li></strong>
+        <hr>
+        <li><i class='fas fa-file-alt'></i> <em>TASK:</em>
+        <br>
+         <strong><%= @job.task %></li></strong>
+        <hr>
+        <li><i class='fas fa-map-marker-alt'></i><em>LOCATION:</em>
+        <br>
+         <strong><%= @job.location %></li></strong>
+         <hr>
+        <li><i class="fa fa-edit"></i><em>DESCRIPTION:</em>
+        <br>
+        <strong><%= @job.description %></li></strong>
+        <hr>
+        <li><i class='fas fa-clock'></i><em>DURATION:</em> <strong><%= @job.duration %></li></strong>
+    </ul>
+    <%= image_tag  "http://maps.google.com/maps/api/staticmap?size=400x400&key=#{Rails.application.secrets.gmail_api_key}&sensor=false&zoom=16&markers=#{@job.latitude}%2C#{@job.longitude}", :class =>'maps'%>
 
-<div class="controls">
-    <% if @current_user == @job.user %>
-    <%= link_to 'Edit job', edit_job_path(@job) %>
-    <%= link_to 'Delete job' , @job, :method => 'delete', :data => {:confirm => 'Are you sure?'} %>
-    <% end %>
-    <% if @current_user != @job.user %> 
-    <%= link_to 'Apply for the job', new_apply_path %>
-    <% end %>
+    <div class="owner">
+        <% if @current_user == @job.user %>
+        <%= link_to 'Edit job', edit_job_path(@job) ,:class => 'edit'%>
+        <%= link_to 'Delete job' , @job, :method => 'delete', :data => {:confirm => 'Are you sure?'},:class => 'delete' %>
+        <%= link_to 'Applicants', job_applicants_path, :class => 'applies' %>
+    </div>    
+        <% end %>
+        <% if @current_user != @job.user %>     
+        <%= link_to 'Apply for the job here', new_applicant_path(@job.id) ,:class => 'apply' %>
+        <% end %>
 </div>
