--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -6,12 +6,12 @@
 
 
   <div class="fields">  
-    <%= link_to jobs_path, :class => 'button' do %>
+    <%= link_to locations_result_path do %>
       <div class="find-job">
       </div>
     <% end %>
 
-    <%= link_to new_job_path, :class => 'button' do %>
+    <%= link_to new_job_path do %>
       <div class="post-job">
         <h2>Post a Job</h2>
       </div>
