--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for @job do |f| %>
+<%= form_for @job, :html => {:multipart => true} do |f| %>
     <%= f.label :task, :requried => true %>
     <%= f.text_field :task %>
     <%= f.label :duration %>
     <%= f.text_field :duration %>
     <%= f.label :image %>
-    <%= f.url_field :image %>
+    <%= f.cl_image_upload :image %>
     <%= f.label :location, :requried => true %>
     <%= f.text_field :location %>
     <%= f.label :description %>
