--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -1,13 +1,13 @@
-<h1>Log In</h1>
+<div class="form">
+    <h1>Log In</h1>
+    <% if flash[:error].present? %>
+    <% end%>
 
-
-<% if flash[:error].present? %>
-<% end%>
-
-<%= form_tag login_path do %>
-    <%= label_tag :email %>
-    <%= email_field_tag :email %>
-    <%= label_tag :password %>
-    <%= password_field_tag :password %>
-    <%= submit_tag "Sign in" %>
-<% end %>
+    <%= form_tag login_path do %>
+        <%= label_tag :email %>
+        <%= email_field_tag :email %>
+        <%= label_tag :password %>
+        <%= password_field_tag :password %>
+        <%= submit_tag "Sign in", :class => 'submit' %>
+    <% end %>
+</div>
