--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,6 +5,8 @@
 <% @users.each do |user| %>
     <ul>
         <li> Name: <%= user.name %></li>
+        <li>Surname <%= user.family %></li>
+        <li>Email: <%= user.email %></li>
     </ul>
     
  <% end %>
