--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -40,7 +40,7 @@ nav {
 
 }
 .home-page {
-    background-image: url(/assets/home.jpg);
+    background-image: asset_url("home.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     box-shadow: 10px 10px 10px rgb(236, 236, 236);
