--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
 <h1>Edit you job post</h1>
 
-<%= render :partial => 'form' %>
+<%= render :partial => 'form' %> <%# Add form file to edit the job %>
 </div>
