--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -1,5 +1,5 @@
 <div class="newjob">
 <h1>Create a new Job</h1>
 
-<%= render :partial => 'form' %>
+<%= render :partial => 'form'  %>  <%# Add the form file to add a job %>
 </div>
