--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,17 +1,17 @@
-<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script> <%# link for icons %>
 <div class="job">
     <h1>Job: <%= @job.task %></h1>
     <hr>
-
-    <%= cl_image_tag @job.image, :class => 'feature' if @job.image.present? %>
+  <%#  All classes in li are icons %>
+    <%= cl_image_tag @job.image, :class => 'feature' if @job.image.present? %> <%# checks if an image is present (cloudinary) %>
     <ul class= 'joblist'>
         <li><i class='fas fa-user-circle'></i><em>POSTED BY:</em>
         <br>
-         <strong><%= @job.user.name%> <%=@job.user.family%> </li></strong>
+         <strong><%= @job.user.name%> <%=@job.user.family%> </li></strong> <%# show the name and sure name of the owner of the job %>
         <hr>
         <li><i class='fas fa-file-alt'></i> <em>TASK:</em>
         <br>
-         <strong><%= @job.task %></li></strong>
+         <strong><%= @job.task %></li></strong> <%# name of the task/job %>
         <hr>
         <li><i class='fas fa-map-marker-alt'></i><em>LOCATION:</em>
         <br>
@@ -23,16 +23,17 @@
         <hr>
         <li><i class='fas fa-clock'></i><em>DURATION:</em> <strong><%= @job.duration %></li></strong>
     </ul>
+    <%# Google maps static image with the use of an API key and geocoder %>
     <%= image_tag  "http://maps.google.com/maps/api/staticmap?size=400x400&key=#{Rails.application.secrets.gmail_api_key}&sensor=false&zoom=16&markers=#{@job.latitude}%2C#{@job.longitude}", :class =>'maps'%>
 
-    <div class="owner">
+    <div class="owner"> <%# Buttons only visible for the owner of a job %>
         <% if @current_user == @job.user %>
         <%= link_to 'Edit job', edit_job_path(@job) ,:class => 'edit'%>
         <%= link_to 'Delete job' , @job, :method => 'delete', :data => {:confirm => 'Are you sure?'},:class => 'delete' %>
         <%= link_to 'Applicants', job_applicants_path, :class => 'applies' %>
     </div>    
-        <% end %>
-        <% if @current_user != @job.user %>     
+        <% end %> 
+        <% if @current_user != @job.user %> <%# if the user is not a the job owner, only application us possible %>    
         <%= link_to 'Apply for the job here', new_applicant_path(@job.id) ,:class => 'apply' %>
         <% end %>
 </div>
