--- a/app/views/applies/show.html.erb
+++ b/app/views/applies/show.html.erb
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container"><%# Confirmation for job application %>
     <h1>Application was succesful!</h1>
     <h2> The owner of the Job post will get back to you soon.</h2>
-        <%= link_to locations_result_path do %>
-            <h2 class="button"> Return to Jobboard</h2>
-        <% end %>
+    <%= link_to locations_result_path do %>
+        <h2 class="button"> Return to Jobboard</h2><%#  return back to job index page %>
+    <% end %>
 </div>
