--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -4,10 +4,10 @@
     <%= f.label :duration %>
     <%= f.text_field :duration %>
     <%= f.label :image %>
-    <%= f.cl_image_upload :image %>
-    <%= f.label :location, :requried => true %>
+    <%= f.cl_image_upload :image %> <%# cloudinary storage for images  %>
+    <%= f.label :location, :requried => true %> <%# location is required %>
     <%= f.text_field :location %>
     <%= f.label :description %>
-    <%= f.text_area :description , :class => "box"  %>
+    <%= f.text_area :description , :class => "box"  %> <%# text area for description, prefered to text_field %>
     <%= f.submit 'Submit Job Post',:class => "submit" %>
 <% end %> 
