--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,8 @@
-<h1>All users</h1>
+<h1>All users</h1><%# For admin only, shows the users contact details %>
 
-<h1><%= @users.count %></h1>
+<h1><%= @users.count %></h1> <%# shows the admin how many user the platform has  %>
 
-<% @users.each do |user| %>
+<% @users.each do |user| %> <%# puts each user in its own box with details like name and email %>
     <ul>
         <li> Name: <%= user.name %></li>
         <li>Surname <%= user.family %></li>
