--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -17,7 +17,7 @@
     <%= f.email_field :email %>
     <%= f.label :password %>
     <%= f.password_field :password %>
-    <%= f.label :password_confirmation %> <%# checks for passowrd match<%#  %> %>
+    <%= f.label :password_confirmation %> <%# checks for passowrd match<%#  %> 
     <%= f.password_field :password_confirmation %>
     <%= f.submit "Sign up!",:class=> 'submit' %>
 <% end %>
